# batch02-day12_cloud_infras_and_deployment

./: .dockerignore  CODE_LAB.md  Dockerfile  Solution.md  prometheus.yml
06-lab-complete/: .env.example  .gitignore  CODELAB.md  Dockerfile  INSTRUCTOR_GUIDE.md  Lab-Solution.md  QUICK_REFERENCE.md  README.md  agent_interaction_demo.html  check_production_ready.py  demo_proxy.py  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements.txt  start_all.ps1  start_all.py  test_client.py
06-lab-complete/Lab_Assignment/: .gitignore  README.md  demo_agents.py  docker-compose.yml
06-lab-complete/Lab_Assignment/group_project/: README.md
06-lab-complete/Lab_Assignment/src/: task10_generation.py  task2_crawl_news.py  task3_convert_markdown.py  task4_chunking_indexing.py  task5_semantic_search.py  task6_lexical_search.py  task7_reranking.py  (+2 more)
06-lab-complete/app/: config.py  dashboard.py  main.py
06-lab-complete/common/: a2a_client.py  auth.py  dashboard.py  llm.py  memory.py  monitoring.py  production_middleware.py  registry_client.py  retry.py
06-lab-complete/compliance_agent/: __main__.py  agent_executor.py  graph.py
06-lab-complete/customer_agent/: __main__.py  agent_executor.py  graph.py
06-lab-complete/exercises/: README.md  exercise_4_multiagent.py
06-lab-complete/frontend/: Dockerfile  package.json  vite.config.ts
06-lab-complete/law_agent/: __main__.py  agent_executor.py  graph.py
06-lab-complete/registry/: __main__.py
06-lab-complete/tax_agent/: __main__.py  agent_executor.py  graph.py
06-lab-complete/tests/: test_agent.py
(+38 files in other folders)
